--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,13 @@ License: GPL (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Imports: 
+  readr (>= 2.1.5),
+  dplyr (>= 1.1.4),
+  tibble (>= 3.2.1),
+  tidyr (>= 1.3.1),
+  stats (>= 3.6.2),
+  utils (>= 3.6.2)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
