finished coding run_tangent and associated unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(run_svd)
 export(run_tangent)
 export(transform_normals)
 import(dplyr)
+import(pracma)
 import(readr)
 import(tibble)
 import(tidyr)
 import(utils)
+importFrom(stats,median)
 importFrom(stats,sd)
