--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
   tibble (>= 3.2.1),
   tidyr (>= 1.3.1),
   stats (>= 3.6.2),
-  utils (>= 3.6.2)
+  utils (>= 3.6.2),
+  pracma (>= 2.4.4)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
