--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,9 @@ Imports:
   tidyr (>= 1.3.1),
   stats (>= 3.6.2),
   utils (>= 3.6.2),
-  pracma (>= 2.4.4)
+  pracma (>= 2.4.4),
+  stringr (>= 1.5.1),
+  ggplot2 (>= 3.5.0)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
