--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,15 +25,16 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
-  readr (>= 2.1.5),
-  dplyr (>= 1.1.4),
-  tibble (>= 3.2.1),
-  tidyr (>= 1.3.1),
-  stats (>= 3.6.2),
-  utils (>= 3.6.2),
-  pracma (>= 2.4.4),
-  stringr (>= 1.5.1),
-  ggplot2 (>= 3.5.0)
+    readr (>= 2.1.5),
+    dplyr (>= 1.1.4),
+    tibble (>= 3.2.1),
+    tidyr (>= 1.3.1),
+    stats (>= 3.6.2),
+    utils (>= 3.6.2),
+    pracma (>= 2.4.4),
+    stringr (>= 1.5.1),
+    ggplot2 (>= 3.5.0),
+    scales (>= 1.3.0)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
