added code to run plot_signal_noise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,23 @@
 
 export(plot_latent_factors)
 export(plot_normal_transformation)
+export(plot_signal_noise)
 export(run_svd)
 export(run_tangent)
 export(transform_normals)
 import(dplyr)
 import(ggplot2)
+import(parallel)
 import(pracma)
 import(readr)
 import(stringr)
 import(tibble)
 import(tidyr)
 import(utils)
+importFrom(ggbeeswarm,position_beeswarm)
+importFrom(ggh4x,facet_grid2)
 importFrom(scales,pretty_breaks)
 importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(tidyselect,matches)
