--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,12 +29,16 @@ Imports:
     dplyr (>= 1.1.4),
     tibble (>= 3.2.1),
     tidyr (>= 1.3.1),
+    tidyselect (>= 1.2.1),
     stats (>= 3.6.2),
     utils (>= 3.6.2),
     pracma (>= 2.4.4),
     stringr (>= 1.5.1),
     ggplot2 (>= 3.5.0),
-    scales (>= 1.3.0)
+    scales (>= 1.3.0),
+    parallel (>= 3.6.2),
+    ggbeeswarm (>= 0.5.3),
+    ggh4x (>= 0.2.8)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
