--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
     scales (>= 1.3.0),
     parallel (>= 3.6.2),
     ggbeeswarm (>= 0.5.3),
-    ggh4x (>= 0.2.8)
+    ggh4x (>= 0.2.8),
+    DNAcopy (>= 1.72.0)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
