--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export(plot_latent_factors)
 export(plot_normal_transformation)
 export(plot_signal_noise)
+export(run_cbs)
+export(run_pseudotangent)
 export(run_svd)
 export(run_tangent)
 export(transform_normals)
+import(DNAcopy)
 import(dplyr)
 import(ggplot2)
 import(parallel)
