modified signal noise code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: RtangentXY
-Title: TangentXY by the Beroukhim Lab
+Title: TangentXY SCNA Signal Normalization by the Beroukhim Lab
 Version: 0.0.1
 Authors@R: 
     c(person(given = "Siyun",
@@ -37,8 +37,6 @@ Imports:
     ggplot2 (>= 3.5.0),
     scales (>= 1.3.0),
     parallel (>= 3.6.2),
-    ggbeeswarm (>= 0.5.3),
-    ggh4x (>= 0.2.8),
     purrr (>= 1.0.2),
     DNAcopy (>= 1.72.0),
     GenomicRanges (>= 1.50.2)
