--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(convert_cbs)
 export(filter_blacklist)
 export(plot_latent_factors)
 export(plot_normal_transformation)
-export(plot_signal_noise)
 export(run_cbs)
 export(run_pseudotangent)
 export(run_svd)
 export(run_tangent)
+export(signal_noise)
 export(transform_normals)
 import(DNAcopy)
 import(dplyr)
@@ -23,11 +23,8 @@ import(tidyselect)
 import(utils)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,countOverlaps)
-importFrom(ggbeeswarm,position_beeswarm)
-importFrom(ggh4x,facet_grid2)
 importFrom(purrr,reduce)
 importFrom(scales,pretty_breaks)
 importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(stats,setNames)
-importFrom(tidyselect,matches)
