Fixed few samples issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(run_pseudotangent)
 export(run_svd)
 export(run_tangent)
 export(signal_noise)
+export(to_matrix)
 export(transform_normals)
 import(DNAcopy)
 import(dplyr)
