Changed pseudotangent, no final CBS step

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(run_cbs)
 export(run_pseudotangent)
 export(run_svd)
 export(run_tangent)
+export(save_segmentation)
 export(signal_noise)
 export(to_matrix)
 export(transform_normals)
