Added transformation on male tumor chrX and male normal chrY

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(convert_cbs)
 export(filter_blacklist)
+export(linear_transformation)
 export(plot_latent_factors)
 export(plot_normal_transformation)
 export(run_cbs)
@@ -11,7 +12,6 @@ export(run_tangent)
 export(save_segmentation)
 export(signal_noise)
 export(to_matrix)
-export(transform_normals)
 import(DNAcopy)
 import(dplyr)
 import(ggplot2)
